--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-  <head<link rel="stylesheet" href="PAGE.css">
+  <head>
+    <link rel="stylesheet" href="PAGE.css">
   </head>
 <h1>Hello World</h1>
 </html>
