--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="PAGE.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 <h1>Hello World</h1>
 </html>
